--- a/package.json
+++ b/package.json
@@ -3,22 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev --turbo",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/material": "^7.0.1",
+    "@sigma/node-square": "^3.0.0",
+    "graphology": "^0.26.0",
+    "graphology-types": "^0.24.8",
+    "lodash": "^4.17.21",
+    "next": "15.2.4",
     "react": "^19.0.0",
+    "react-contexify": "^6.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.4"
+    "sigma": "^3.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
