--- a/network-graph-app/.gitignore
+++ b/network-graph-app/.gitignore
@@ -1,12 +1,25 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
 # testing
+/coverage
+/*.sh
 
 # next.js
+/.next/
+/out/
 
 # production
+/build
 
 # misc
 .DS_Store
